Improve language selector component

--- a/src/translations/en/components.json
+++ b/src/translations/en/components.json
@@ -17,13 +17,7 @@
     },
     "candles": {},
     "experiments": {},
-    "languageSelector": {
-        "label": "Select a language:",
-        "languages": {
-            "en": "English",
-            "pt": "Portuguese"
-        }
-    },
+    "languageSelector": {},
     "layout": {},
     "nav": {
         "open": "Open",
