Update button to use DS

--- a/src/translations/pt/pages.json
+++ b/src/translations/pt/pages.json
@@ -30,7 +30,7 @@
     },
     "home": {
         "title": {
-            "hello": "Oi oi!",
+            "hello": "Opa, supimpa?",
             "intro": "Eu sou a"
         },
         "button": {
