Create about page

--- a/src/translations/en/components.json
+++ b/src/translations/en/components.json
@@ -25,6 +25,7 @@
         "menuLabel": "navigation menu",
         "routes": {
             "home": "Home",
+            "abbout": "About",
             "developments": "Developments",
             "contact": "Contact"
         },
