--- a/src/translations/en/components.json
+++ b/src/translations/en/components.json
@@ -25,7 +25,7 @@
         "menuLabel": "navigation menu",
         "routes": {
             "home": "Home",
-            "abbout": "About",
+            "about": "About",
             "developments": "Developments",
             "contact": "Contact"
         },
