--- a/src/translations/pt/components.json
+++ b/src/translations/pt/components.json
@@ -37,6 +37,7 @@
     "projects": {
         "underConstruction": "Essa área ainda está sob alguns ajustes. Meus projetos mais impactantes foram todos para clientes, então por enquanto, está um tanto vazio por aqui...",
         "portfolioInvite": "Mas isso não significa que não tem nada pra ver! Enquanto estou criando algo para essa seção, que tal dar uma olhadinha no <a>código desse portfólio no GitHub</a>? É lá que a mágica começa.",
+        "dsInvite": "Eu também estou criando meu próprio design system, <a>vai lá checar</a>!",
         "askFeedback": "E já que chegou até aqui, que tal também espiar os meus Experimentos ou dar uma conferida nas Realizações? No mais, minha <a>página de contato</a> está sempre aberta pra você. Seria ótimo saber o que você pensa!"
     }
 }
